--- a/Gallery/Info.plist
+++ b/Gallery/Info.plist
@@ -58,5 +58,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Save Photo to Album</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Save Photo to Album</string>
 </dict>
 </plist>
